# semanticat

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
design/: Semantic Search Crates.md  rust-crates.md  semantic-clustering.md
src/: clustering.rs  embedding.rs  grouping.rs  heading.rs  input.rs  main.rs  output.rs  progress.rs
tests/: integration.rs
