[package]
name = "semanticat"
version = "0.1.0"
edition = "2024"

[dependencies]
model2vec-rs = "0.1"
avx-clustering = "0.1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
ndarray = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
