[package]
name = "semanticat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
hdbscan = "0.12.0"
fastembed = "5.17.2"
indicatif = "0.17"
